2009-01-29 Chris Allegretta <chrisa@asty.org>
	* nano.c (move_to_filestruct) - properky initialize new fileage for multiswatching, sigh.
	  Fix cut sefaults discovered by Mike Frysinger.

2009-01-29 Chris Allegretta <chrisa@asty.org>
	* nano.c (main): Add support for nano acting like a pager when invoked with - as first
	  file argument.

2009-01-28 Davide Pesavento <davidepesa@gmail.com>
	* doc/syntax/gentoo.nanorc: Updates from David and Mike Frysinger.

2009-01-25 Chris Allegretta <chrisa@asty.org>
	* files.c (open_file), nanorc.c (parse_include): Don't get_full_path on 
	  included rc files, due to it potentially impacting the ability
	  to read files in nano's cwd().  Fixes Savnanah bug #25297 reported by Mike 
	  Frysinger)

2009-01-24 Chris Allegretta <chrisa@asty.org>
	* First pass at some caching of caching color info.  Right now it's only for
	  multi-line regexes but this may not be enough to increase performance.
	* Add interruptability to search functions.  New functions enable_nodelay and
	  disable_nodelay and changes to the routines to handle checking for pending
	  searches.  Fixes Savnnah bug 24946: Need interrrupt for search.

2009-01-19 Chris Allegretta <chrisa@asty.org>
	* Change function definitions to shorts instead of (void *)s.  New mapping function
          iso_me_harder_funcmap().  Fixes compilation complaints with -pedantic, 
	  reported by Eitan Adler <eitanadlerlist@gmail.com>.

GNU nano 2.1.7 - 2008.11.10
2008-10-20 Chris Allegretta <chrisa@asty.org>
	* files.c (do_writeout): Add check for file modification when saving
	  the file so the user can at least know they may be blowing away changes.

2008-10-14 Chris Allegretta <chrisa@asty.org>
	* nanorc.5: Fix redo man page entry and update explanation, reported by
	  Eitan Adler <eitanadlerlist@gmail.com>
	* global.c (shortcut_init), search.c (search_init): Fix add_to_sclist for ^W^T so
	  invalid messages will display properly.  Fixes Savannah bug 24507.
