@@ -147,7 +147,12 @@ syntaxtype *syntaxes = NULL;
 	/* The global list of color syntaxes. */
 char *syntaxstr = NULL;
 	/* The color syntax name specified on the command line. */
+
 #endif
+
+bool edit_refresh_needed = NULL;
+	/* Did a command mangle enough of the buffer refresh that we 
+	   should repaint the screen */
 
 const shortcut *currshortcut;
 	/* The current shortcut list we're using. */
