@@ -32,6 +32,7 @@
 #include <errno.h>
 #include <ctype.h>
 #include <locale.h>
+#include <time.h>
 #ifdef ENABLE_UTF8
 #include <langinfo.h>
 #endif
@@ -1598,7 +1599,10 @@ int do_input(bool *meta_key, bool *func_key, bool *s_or_t, bool
 				if (!f->viewok && openfile->syntax != NULL 
 					&& openfile->current->multidata && openfile->syntax->nmultis > 0) {
 				    reset_multis(openfile->current);
+				}
+				if (edit_refresh_needed) {
 				    edit_refresh();
+				    edit_refresh_needed = FALSE;
 				}
 #endif
 			    }
@@ -1871,9 +1875,10 @@ void do_output(char *output, size_t output_len, bool allow_cntrls)
 #ifdef ENABLE_COLOR
     reset_multis(openfile->current);
 #endif
-    if (do_refresh)
+    if (do_refresh) {
 	edit_refresh();
-    else
+	edit_refresh_needed = FALSE;
+    } else
 	update_line(openfile->current, openfile->current_x);
 }
 
