@@ -100,6 +100,7 @@ extern syntaxtype *syntaxes;
 extern char *syntaxstr;
 #endif
 
+extern bool edit_refresh_needed;
 extern const shortcut *currshortcut;
 extern int currmenu;
 
